# vouchsafe

./: .gitignore  Cargo.toml  LICENSE  README.md  audit.md  package-lock.json  wrangler.toml
.github/workflows/: ci.yml
contracts/access-control/: Cargo.toml
contracts/access-control/src/: lib.rs  test.rs
contracts/access-control/test_snapshots/test/: test_get_access_request_returns_none_for_unknown_id.1.json  test_grant_access_requires_subject_auth.1.json  test_grant_access_unauthorized.1.json  test_request_ids_increment_sequentially.1.json  test_request_proof_requires_verifier_auth.1.json  test_verify_disclosure_failure_expired_grant.1.json  test_verify_disclosure_failure_field_not_in_schema.1.json  test_verify_disclosure_failure_revoked_grant.1.json  test_verify_disclosure_failure_tampered_value.1.json  test_verify_disclosure_success.1.json
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: lib.rs  test.rs
contracts/credential-vault/: Cargo.toml
contracts/credential-vault/src/: lib.rs  test.rs
contracts/vouch-gate/: Cargo.toml
contracts/vouch-gate/src/: lib.rs  test.rs
contracts/vouch-registry/: Cargo.toml
contracts/vouch-registry/src/: lib.rs  test.rs
contracts/vouch-vault/: Cargo.toml
contracts/vouch-vault/src/: lib.rs  test.rs
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/__tests__/: merkle.test.ts  soroban.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientHome.tsx
scratch/: deploy_and_test.js
(+52 files in other folders)
