[package]
name = "access-control"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
credential-vault = { path = "../credential-vault" }
attestation-registry = { path = "../attestation-registry" }

